Implementerat UpdateRole och alla tester
